<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.mundroid.apps.shoeapp.models.Shoe" />

        <variable
            name="viewModel"
            type="com.mundroid.apps.shoeapp.viewmodels.ShoeViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/shoe_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher_foreground" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@={shoe.companyName}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/company_name" />

                <TextView
                    android:id="@+id/shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@={shoe.shoeSize}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/shoe_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:text="@={shoe.shoeName}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/shoe_name" />


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:lines="3"
                android:maxLength="80"
                android:maxLines="3"
                android:text="@={shoe.description}"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="@string/description" />
        </LinearLayout>


    </LinearLayout>

</layout>
